:bug: dark mode

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1267,12 +1267,16 @@ input[type=file] {
   margin-left: 0.5rem;
 }
 
-.-mt-8 {
-  margin-top: -2rem;
+.-ml-4 {
+  margin-left: -1rem;
 }
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.-mt-8 {
+  margin-top: -2rem;
 }
 
 .ml-5 {
@@ -1281,14 +1285,6 @@ input[type=file] {
 
 .ml-4 {
   margin-left: 1rem;
-}
-
-.-ml-5 {
-  margin-left: -1.25rem;
-}
-
-.-ml-4 {
-  margin-left: -1rem;
 }
 
 .block {
@@ -1455,6 +1451,18 @@ input[type=file] {
   width: 70%;
 }
 
+.w-\[160px\] {
+  width: 160px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[70px\] {
+  width: 70px;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -1473,42 +1481,6 @@ input[type=file] {
 
 .w-\[200px\] {
   width: 200px;
-}
-
-.w-2\/5 {
-  width: 40%;
-}
-
-.w-2\/6 {
-  width: 33.333333%;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[150px\] {
-  width: 150px;
-}
-
-.w-\[160px\] {
-  width: 160px;
-}
-
-.w-\[180px\] {
-  width: 180px;
-}
-
-.w-\[70px\] {
-  width: 70px;
-}
-
-.w-\[170px\] {
-  width: 170px;
 }
 
 .min-w-0 {
@@ -1609,10 +1581,6 @@ input[type=file] {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-rows-1 {
@@ -1884,12 +1852,12 @@ input[type=file] {
   border-bottom-width: 2px;
 }
 
-.border-b-4 {
-  border-bottom-width: 4px;
-}
-
 .border-l-2 {
   border-left-width: 2px;
+}
+
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 
 .border-gray-700 {
@@ -2189,6 +2157,11 @@ input[type=file] {
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
+}
+
+.py-\[1px\] {
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .pl-11 {
@@ -3052,16 +3025,16 @@ input[type=file] {
     margin-bottom: 1.5rem;
   }
 
+  .md\:ml-6 {
+    margin-left: 1.5rem;
+  }
+
   .md\:ml-\[200px\] {
     margin-left: 200px;
   }
 
   .md\:-ml-\[213px\] {
     margin-left: -213px;
-  }
-
-  .md\:ml-6 {
-    margin-left: 1.5rem;
   }
 
   .md\:block {
